--- a/HORARIO.html
+++ b/HORARIO.html
@@ -47,23 +47,27 @@
         <td>—</td>
       </tr>
     </table>
-
+    <br><br>
     <p class="seccion">
       <strong>Excepto los días festivos</strong>
     </p>
 
     <div class="lista-campus">
-      <a>1 de enero (miércoles): Año Nuevo.</a>
-      <a>6 de enero (lunes): Epifanía del Señor.</a>
-      <a>17 de abril (jueves): Jueves Santo.</a>
-      <a>18 de abril (viernes): Viernes Santo.</a>
-      <a>21 de abril (lunes): Lunes de Pascua.</a>
-      <a>25 de julio (viernes): Santiago Apóstol.</a>
-      <a>15 de agosto (viernes): Asunción de la Virgen.</a>
-      <a>1 de noviembre (sábado): Todos los Santos.</a>
-      <a>6 de diciembre (sábado): Día de la Constitución Española.</a>
-      <a>8 de diciembre (lunes): Inmaculada Concepción.</a>
-      <a>25 de diciembre (jueves): Navidad.</a>
+        <div class="primeros">
+            <p>1 de enero (miércoles): Año Nuevo.</p>
+            <p>6 de enero (lunes): Epifanía del Señor.</p>
+            <p>17 de abril (jueves): Jueves Santo.</p>
+            <p>18 de abril (viernes): Viernes Santo.</p>
+            <p>21 de abril (lunes): Lunes de Pascua.</p>
+            <p>25 de julio (viernes): Santiago Apóstol.</p>
+        </div>
+        <div class="segundos">
+            <p>15 de agosto (viernes): Asunción de la Virgen.</p>
+            <p>1 de noviembre (sábado): Todos los Santos.</p>
+            <p>6 de diciembre (sábado): Día de la Constitución Española.</p>
+            <p>8 de diciembre (lunes): Inmaculada Concepción.</p>
+            <p>25 de diciembre (jueves): Navidad.</p>
+        </div>
     </div>
   </main>
 
