--- a/HORARIO.html
+++ b/HORARIO.html
@@ -3,32 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="GUREKIN.ico">
+  <meta name="author" content="Eder Casalengua, Iker Fernández">
+  <link rel="icon" type="image/x-icon" href="../Fotos/GUREKIN.ico">
   <link rel="stylesheet" href="HORARIO.css">
   <title>Horario | Biblioteca GUREKIN</title>
 </head>
 <body>
   <header>
     <nav class="menu">
-      <div class="guia_menu"><a href="INDEX.html"><b>Inicio</b></a></div>
-      <div class="guia_menu"><a href="HORARIO.html"><b>Horario</b></a></div>
-      <div class="guia_menu"><a href="POPULARES.html"><b>Populares</b></a></div>
-      <div class="guia_menu"><a href="REGISTRO.html"><b>Registro</b></a></div>
-      <div class="guia_menu"><a href="INICIOSESION.html"><b>Inicio sesión</b></a></div>
+      <a href="../INDEX/INDEX.html"><b>Inicio</b></a>
+      <a href="HORARIO.html"><b>Horario</b></a>
+      <a href="../POPULARES/POPULARES.html"><b>Populares</b></a>
+      <a href="../REGISTRO/REGISTRO.html"><b>Registro</b></a>
+      <a href="../INICIOSESION/INICIOSESION.html"><b>Inicio sesión</b></a>
     </nav>
   </header>
 
   <main>
-    <h1 class="titulo">Horario Biblioteca Gurekin</h1>
-
+    <h1 id="titulo">Horario Biblioteca Gurekin</h1>
     <table>
       <tr>
-        <th>Lunes</th>
-        <th>Martes</th>
-        <th>Miércoles</th>
-        <th>Jueves</th>
-        <th>Viernes</th>
-        <th>Sábado</th>
+        <th>LUNES</th>
+        <th>MARTES</th>
+        <th>MIÉRCOLES</th>
+        <th>JUEVES</th>
+        <th>VIERNES</th>
+        <th>SÁBADO</th>
       </tr>
       <tr>
         <td>08:00 / 14:30</td>
@@ -48,11 +48,9 @@
       </tr>
     </table>
     <br><br>
-    <p class="seccion">
-      <strong>Excepto los días festivos</strong>
-    </p>
+    <p id="excepto"><b>Excepto los días festivos</b></p>
 
-    <div class="lista-campus">
+    <div class="festivos">
         <div class="primeros">
             <p>1 de enero (miércoles): Año Nuevo.</p>
             <p>6 de enero (lunes): Epifanía del Señor.</p>
@@ -70,6 +68,14 @@
         </div>
     </div>
   </main>
+
+  <nav class="menu_inferior">
+    <a href="../INDEX/INDEX.html">Inicio</a>
+    <a href="HORARIO.html">Horario</a>
+    <a href="../POPULARES/POPULARES.html">Populares</a>
+    <a href="../REGISTRO/REGISTRO.html">Registro</a>
+    <a href="../INICIOSESION/INICIOSESION.html">Inicio sesión</a>
+  </nav>
 
   <footer>
     <p><b>© 2025 Biblioteca GUREKIN</b></p>
